--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -1,21 +1,19 @@
-name: GH4W-Atividade-Modulo4-P1
+name: GH4W-Atividade-Modulo4
 
 on:
   push:
-    branches:
-      - main
+  workflow_dispatch:
   schedule:
-    - cron:  '0 * * * *'
+    - cron:  '0 1 * * *'
 
 jobs:
-  build:
+  scheduled:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout código
+    - name: Check out this repo
       uses: actions/checkout@v2
-
     - name: Executar um script personalizado
       run: |
         echo "Este é um script personalizado."
-        echo "Ele será executado em cada push para o repositório e a cada hora."
+        echo "Ele será executado a cada hora."
